2000-09-18  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/mach/hurd/bits/posix_opt.h (_POSIX_SYNCHRONIZED_IO):
	#undef since we don't have msync.

	* sysdeps/mach/hurd/bits/time.h: (CLOCKS_PER_SEC): Make a long int
	constant since that is what clock_t is.
	* sysdeps/mach/hurd/i386/bits/time.h: Likewise.

2000-09-11  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/mach/getloadavg.c (getloadavg): Divide instead of
	multiply by LOAD_SCALE.

2000-09-22  Jakub Jelinek  <jakub@redhat.com>

	* crypt/crypt.h (crypt, setkey, encrypt): Add __THROW.
	(crypt_r, setkey_r, encrypt_r): Likewise.

2000-09-22  Andreas Jaeger  <aj@suse.de>

	* locale/programs/repertoire.c (repertoiremap_hash): Don't specify
	array size.

	* sysdeps/alpha/fpu/libm-test-ulps: New file.
	From Christian Iseli <chris@ludwig-alpha.unil.ch>.

2000-09-21  Andreas Jaeger  <aj@suse.de>

	* math/libm-test.inc (atan_test): Test for existence of function.
	(expm1_test): Likewise.
	(acos_test): Likewise.
	(asin_test): Likewise.
	(exp_test): Likewise.
	(log10_test): Likewise.
	(log_test): Likewise.
	(pow_test): Likewise.
	(sqrt_test): Likewise.
	(cos_test): Likewise.
	(sin_test): Likewise.
	(tan_test): Likewise.
	(log1p_test): Likewise.
	(log2_test): Likewise.

	* sysdeps/i386/fpu/libm-test-ulps: Tweak some values for K6.

	* libio/oldiofsetpos64.c: Fix alias names.

2000-09-21  Martin Buchholz  <martin@xemacs.org>

	* manual/terminal.texi (Allocation): Sample code correction.

2000-09-20  Andreas Jaeger  <aj@suse.de>

	* iconvdata/Makefile (generated): Add tst-tables.out.

	* intl/Makefile	(generated): Add test output.

2000-09-19  Andreas Jaeger  <aj@suse.de>

	* sunrpc/clnt_simp.c (callrpc): Fix write beyond end of buffer.
	Reported by Jens-Uwe Mager <jum@helios.de>.

2000-09-18  Ulrich Drepper  <drepper@redhat.com>

	* version.h (VERSION): Bump to 2.1.94.

	* sysdeps/mips/Dist: Add fpu/fenv_libc.h.
	* sysdeps/sparc/sparc32/soft-fp/Dist: Add q_add.c.
	* sysdeps/sparc/sparc64/soft-fp/Dist: Add qp_add.c.